--- a/sec.html
+++ b/sec.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sec.css">
+    <link rel="stylesheet" href="three.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,26 +20,26 @@
     <div class="content">
         <p>Основные характеристики ПК для базового пользователя:</p>
         <ul>
-            <li>1. Процессор: AMD Ryzen 7 9800X3D (8 ядер, 16 потоков; базовая частота — 4,7 ГГц, максимальная — 5,2 ГГц).</li>
-            <li>2. Оперативная память: 64 ГБ DDR5 (2 × 32 ГБ, частота — 6400 МГц).</li>
-            <li>3. Видеокарта: Palit GeForce RTX 5080 GamingPro OC (16 ГБ GDDR7).</li>
-            <li>4. Накопитель: SSD 2 ТБ М.2 PCIe (MSI SPATIUM M480 PRO).</li>
-            <li>5. Блок питания: 1000 Вт.</li>
-            <li>6. Охлаждение: СЖО.</li>
-            <li>7. Корпус: MONTECH KING 95 PRO.</li>
-            <li>8. Операционная система: не установлена.</li>
-            <li>9. Разъёмы (основные):</li>
+            <li> Процессор: AMD Ryzen 7 9800X3D (8 ядер, 16 потоков; базовая частота — 4,7 ГГц, максимальная — 5,2 ГГц).</li>
+            <li> Оперативная память: 64 ГБ DDR5 (2 × 32 ГБ, частота — 6400 МГц).</li>
+            <li> Видеокарта: Palit GeForce RTX 5080 GamingPro OC (16 ГБ GDDR7).</li>
+            <li> Накопитель: SSD 2 ТБ М.2 PCIe (MSI SPATIUM M480 PRO).</li>
+            <li> Блок питания: 1000 Вт.</li>
+            <li> Охлаждение: СЖО.</li>
+            <li> Корпус: MONTECH KING 95 PRO.</li>
+            <li> Операционная система: не установлена.</li>
+            <li> Разъёмы (основные):</li>
                 <ul>
-                    <li>• USB 3.2 Gen 2 (Туре-А и Type-C);</li>
-                    <li>• USB4 (2 шт.);</li>
-                    <li>• HDMI 2.1b (1 шт.);</li>
-                    <li>• DisplayPort 2.1b (3 шт.);</li>
-                    <li>• аудиоразъёмы 3,5 мм (микрофон и наушники).</li>
+                    <li> USB 3.2 Gen 2 (Туре-А и Type-C);</li>
+                    <li> USB4 (2 шт.);</li>
+                    <li> HDMI 2.1b (1 шт.);</li>
+                    <li> DisplayPort 2.1b (3 шт.);</li>
+                    <li> аудиоразъёмы 3,5 мм (микрофон и наушники).</li>
                 </ul>
         </ul>
         <p>Гарантия: 36 месяцев.<br>
         Страна-производитель: Россия.</p>
-        <div class="footer-text">
+        <div class="tip">
             более точные данные
         </div>
     </div>
