--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-            <div class="title">МОЩНЫЕ ИГРОВЫЕ КОМПЫ</div>
-            <div class="cart">Корзина</div>
+        <div class="title">МОЩНЫЕ ИГРОВЫЕ КОМПЫ</div>
+        <div class="cart">Корзина</div>
     </header>
     <main>
         <div id="introduction">
@@ -21,7 +21,7 @@
                     <li>Надёжные комплектующие</li>
                     <li>Гарантия на свою продукцию</li>
                     <li>Техническая поддержка на протяжении всего срока
-                эксплуатации</li>
+                        эксплуатации</li>
                     <li>Доставка по всей России</li>
                 </ul>
 
@@ -29,10 +29,13 @@
             <div class="preim">от 3 дней доставка</div>
         </div>
         <div class="container">
-            <div class="card">
-            <div class="name">Ну очень крутой компьютер 2000</div>
-            <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
-            <div class="cost">Стоимость товара:132 499 ₽</div>
+            <a href="sec.css">
+                <div class="card">
+                    <div class="name">Ну очень крутой компьютер 2000</div>
+                    <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
+                    <div class="cost">Стоимость товара:132 499 ₽</div>
+            </a>
+
         </div>
         <div class="card">
             <div class="name"></div>
@@ -40,8 +43,8 @@
             <div class="cost"></div>
         </div>
         </div>
-        
-        
+
+
     </main>
 </body>
 
