--- a/pay2.html
+++ b/pay2.html
@@ -13,7 +13,7 @@
         <div class="back"><a href="three.html">ᐸНазад</a></div>
     </header>
     <main><div class="pay">
-    <form action="">
+    <form action="not.html">
         <label for="tel" id="tel">
             Номер телефона<input placeholder="Ведите номер телефона" type="tex" name="tel" id="" required>
         </label><br>
@@ -23,7 +23,7 @@
         <label for="telegram" id="telegram">
             Ваш телешрам акаунт <input placeholder="Ведите свой username" type="telegram" name="telegram" id="" required>
         </label>
-
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac6999c38d9d408211b28734f430d247f2a213fa953305054d367a3b588ef0c04&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         </label> <br>
         </label>
         <label for="rem">
@@ -31,7 +31,7 @@
                 href="https://www.triniti.ru/politika-konfidentsialnosti/">политика конфиденциальности </a>
         </label><br>
 
-        <input type="submit" id="submit" 2>
+       <a href=""><input type="submit" id="submit" 2></a> 
         </div>
     </main>
 </body>
