--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <div class="title">МОЩНЫЕ ИГРОВЫЕ КОМПЫ</div>
-        <div class="cart">Корзина</div>
     </header>
     <main>
         <div id="introduction">
@@ -29,7 +28,7 @@
             <div class="preim">от 3 дней доставка</div>
         </div>
         <div class="container">
-            <a href="sec.css">
+            <a href="three.html">
                 <div class="card">
                     <div class="name">Ну очень крутой компьютер 2000</div>
                     <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
@@ -37,11 +36,13 @@
             </a>
 
         </div>
-        <div class="card">
-            <div class="name"></div>
-            <div class="photo"></div>
-            <div class="cost"></div>
-        </div>
+        <a href="sec.html">
+            <div class="card">
+                <div class="name">НУ ПРОСТО МОЩЬ ВО ПЛОТИ 3000</div>
+                <div class="photo"><img src="img/r9.png" alt="+"></div>
+                <div class="cost">Стоимость товара:666 666 ₽</div>
+            </div>
+        </a>
         </div>
 
 
