--- a/sec.html
+++ b/sec.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="three.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">ᐸНазад</a>
@@ -13,37 +15,63 @@
     <main>
         <div class="container">
             <div class="card">
-            <div class="name">Ну очень крутой компьютер 2000</div>
-            <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
-            <div class="cost">Стоимость товара:132 499 ₽</div>
-            
-    <div class="content">
-        <p>Основные характеристики ПК для базового пользователя:</p>
-        <ul>
-            <li> Процессор: AMD Ryzen 7 9800X3D (8 ядер, 16 потоков; базовая частота — 4,7 ГГц, максимальная — 5,2 ГГц).</li>
-            <li> Оперативная память: 64 ГБ DDR5 (2 × 32 ГБ, частота — 6400 МГц).</li>
-            <li> Видеокарта: Palit GeForce RTX 5080 GamingPro OC (16 ГБ GDDR7).</li>
-            <li> Накопитель: SSD 2 ТБ М.2 PCIe (MSI SPATIUM M480 PRO).</li>
-            <li> Блок питания: 1000 Вт.</li>
-            <li> Охлаждение: СЖО.</li>
-            <li> Корпус: MONTECH KING 95 PRO.</li>
-            <li> Операционная система: не установлена.</li>
-            <li> Разъёмы (основные):</li>
-                <ul>
-                    <li> USB 3.2 Gen 2 (Туре-А и Type-C);</li>
-                    <li> USB4 (2 шт.);</li>
-                    <li> HDMI 2.1b (1 шт.);</li>
-                    <li> DisplayPort 2.1b (3 шт.);</li>
-                    <li> аудиоразъёмы 3,5 мм (микрофон и наушники).</li>
-                </ul>
-        </ul>
-        <p>Гарантия: 36 месяцев.<br>
-        Страна-производитель: Россия.</p>
-        <div class="tip">
-            более точные данные
-        </div>
-    </div>
+                <div class="name">НУ ПРОСТО МОЩЬ ВО ПЛОТИ </div>
+                <div class="photo"> <img src="img/r9.png" alt="7500f"></div>
+              <a href="pay2.html"><div class="cost">Стоимость товара:666 666 ₽</div></a>  
+                </div>
 
+                <div class="z2000">
+                    <p>Основные характеристики ПК для базового пользователя:</p>
+                    <ul>
+                        Технические характеристики компьютера
+                        Процессор
+
+
+                        <ul>
+                            <li> Модель процессора: AMD Ryzen 9 9950X3D</li>
+                            <li>Общее количество ядер:
+                                16</li>
+                            <li> Количество потоков:
+                                32</li>
+                            <li> частота ядер
+                                от 4.3 ГГц до 5.7 ГГц</li>
+                        </ul>
+                        Оперативная память
+                        <ul>
+                            <li> Тип оперативной памяти:
+                                DDR5</li>
+                            <li> Форм-фактор оперативной памяти:
+                                DIMM</li>
+                            <li> Частота оперативной памяти:
+                                6400 МГц</li>
+                        </ul>
+                        Видеокарта
+
+                        <ul>
+                            <li> Модель дискретной видеокарты:
+                                GeForce RTX 5090</li>
+                            <li> Тип видеопамяти:
+                                GDDR7</li>
+                            <li>Объем видеопамяти:
+                                32 ГБ</li>
+
+                        </ul>
+                        Материнская плата
+                        <ul>
+                            <li> Сокет:
+                                AM5</li>
+                            <li> Чипсет:
+                                AMD X870</li>
+                            <li> Количество слотов оперативной памяти:
+                                4</li>
+                        </ul>
+
+                    </ul>
+                    <p>Гарантия: 36 месяцев.<br>
+                        Страна-производитель: Россия.</p>
+                </div>
+        </div>
     </main>
 </body>
+
 </html>
