--- a/three.html
+++ b/three.html
@@ -14,135 +14,51 @@
     </header>
     <main>
         <div class="container">
-        <div class="card">
-            <div class="name">Ну очень крутой компьютер 2000</div>
-            <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
-            <div class="cost">Стоимость товара:132 499 ₽</div>
-        </div>
-        <div class="z2000"> 
+            <div class="card">
+                <div class="name">Ну очень крутой компьютер 2000</div>
+                <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
+            <a href="pay2.html"><div class="cost">Стоимость товара:132 499 ₽</div></a>    
+            </div>
+            <div class="z2000">
 
-            Технические характеристики компьютера
-            Процессор
-            <ul>
-                <li>Модель: AMD Ryzen 5 7500F</li>
-                <li>Количество ядер: 6</li>
-                <li>Количество потоков: 12</li>
-                <li>Тактовая частота: от 3,7 ГГц до 5 ГГц</li>
-            </ul>
-            Оперативная память (ОЗУ)
-            <ul>
-                <li>Объём: 32 ГБ</li>
-                <li>Тип: DDR5</li>
-            </ul>
-            Видеокарта
-            <ul>
-                <li>Модель: GeForce RTX 5070</li>
-                <li>Объём видеопамяти: 12 ГБ</li>
-                <li>Тип видеопамяти: GDDR7</li>
-            </ul>
-            Операционная система
-            <ul>
-                <li>Предустановленная ОС: отсутствует</li>
-            </ul>
-
-            Видеоразъёмы
-            <ul>
-                <li>HDMI: 1 шт.</li>
-                <li>DisplayPort: 3 шт.</li>
-            </ul>
-
-
-            Чипсет
-            <ul>
-                <li>Модель: AMD B650</li>
-                <li>Сокет: AM5</li>
-            </ul>
-</div>
-
-            <div class="tip"> Технические характеристики ПК Ну очень крутой компьютер 2000
-
-                Общие данные
-                <ul>
-                    <li>Гарантия продавца: 36 мес.</li>
-                    <li>Срок эксплуатации: 36 мес. </li>
-                    <li>Страна‑производитель: Россия </li>
-                    <li>Тип: ПК </li>
-                    <li>Модель: Ну очень крутой компьютер 2000 </li>
-                    <li>Линейка: Ну очень крутой компьютер</li>
-                    <li>Форм‑фактор корпуса: Mid‑Tower</li>
-                    <li>Цвет корпуса: чёрный</li>
-                    <li>Операционная система: без ОС</li>
-                </ul>
+                Технические характеристики компьютера
                 Процессор
                 <ul>
-                    <li>Модель: AMD Ryzen 5 7500F </li>
-                    <li>Общее количество ядер: 6 </li>
-                    <li>Количество производительных ядер: 6 </li>
-                    <li>Количество энергоэффективных ядер: 0 </li>
-                    <li>Количество потоков: 12 </li>
-                    <li>Базовая частота производительных ядер: 7 ГГц</li>
-                    <li>Максимальная частота производительных ядер: 5 ГГц </li>
+                    <li>Модель: AMD Ryzen 5 7500F</li>
+                    <li>Количество ядер: 6</li>
+                    <li>Количество потоков: 12</li>
+                    <li>Тактовая частота: от 3,7 ГГц до 5 ГГц</li>
                 </ul>
-
-                Материнская плата
+                Оперативная память (ОЗУ)
                 <ul>
-                    <li>Сокет: AM5</li>
-                    <li>Чипсет: AMD B650</li>
-                    <li>Слоты оперативной памяти: 4 </li>
-                </ul>
-                перативная память
-                <ul>
+                    <li>Объём: 32 ГБ</li>
                     <li>Тип: DDR5</li>
-                    <li>Форм‑фактор: DIMM</li>
-                    <li>Частота: 6000 МГц</li>
-                    <li>Количество модулей: 2</li>
-                    <li>Общий объём: 32 ГБ</li>
                 </ul>
-
                 Видеокарта
                 <ul>
-                    <li>Тип: дискретная</li>
-                    <li>Модель дискретной видеокарты: GeForce RTX 5070 </li>
+                    <li>Модель: GeForce RTX 5070</li>
+                    <li>Объём видеопамяти: 12 ГБ</li>
                     <li>Тип видеопамяти: GDDR7</li>
-                    <li>Объём видеопамяти: 12 ГБ </li>
                 </ul>
-                Накопители
+                Операционная система
                 <ul>
-                    <li>SSD: 1 ТБ M.2 PCIe (MSI SPATIUM M450 V1) </li>
-                    <li>HDD: нет </li>
+                    <li>Предустановленная ОС: отсутствует</li>
                 </ul>
-                Разъёмы
+
+                Видеоразъёмы
                 <ul>
-                    <li>USB Type‑A: 2 USB 3.2 Gen 1</li>
-                    <li>USB Type‑C: 1 USB 3.2 Gen 2</li>
-                    <li>Аудиоразъёмы: 3.5 мм jack (аудио/микрофон)</li>
-                    <li>USB Type‑A: 3 USB 3.2 Gen 2, 4 times USB 3.2 Gen 1</li>
-                    <li>USB Type‑C: 1 USB 3.2 Gen 2x2</li>
-                    <li>Видеоразъёмы: 1 HDMI 2.1b, 3 DisplayPort 2.1b </li>
-                    <li>Аналоговые аудиоразъёмы: 6</li>
-                    <li>Прочие: 2 SMA (для антенны Wi‑Fi) </li>
+                    <li>HDMI: 1 шт.</li>
+                    <li>DisplayPort: 3 шт.</li>
                 </ul>
-                БП
+
+
+                Чипсет
                 <ul>
-                    <li>Мощность: 650 Вт </li>
-                    <li>Сертификация: 80 PLUS Bronze (DEEPCOOL PL650D) </li>
-                </ul>
-                Корпус и охлаждение
-                <ul>
-                    <li>Корпус: DEEPCOOL CK560</li>
-                    <li>Окно на боковой стенке: есть</li>
-                    <li>Охлаждение процессора: ARDOR GAMING SOAR Black (на базе DEEPCOOL AG400 BK ARGB)</li>
-                </ul>
-                Габариты
-                <ul>
-                    <li>Длина: 456 мм </li>
-                    <li>Ширина: 230 мм </li>
-                    <li>Высота: 471 мм</li>
-                    <li>4,939 848 × 10⁻²⁰ Мм³</li>
+                    <li>Модель: AMD B650</li>
+                    <li>Сокет: AM5</li>
                 </ul>
             </div>
         </div>
-
     </main>
 </body>
 
