--- a/basemin.html
+++ b/basemin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ну очень крутой компьютер 2000</title>
+    <title>Базовый минимум</title>
     <link rel="stylesheet" href="three.css">
 </head>
 
@@ -15,47 +15,48 @@
     <main>
         <div class="container">
             <div class="card">
-                <div class="name">Ну очень крутой компьютер 2000</div>
-                <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
-            <a href="pay2.html"><div class="cost">Стоимость товара:173 457 ₽</div></a>    
+                <div class="card">
+                    <div class="name">Базовый минимум</div>
+                    <div class="photo"><img src="img/rtx 3060.png" alt="+"></div>
+                    <a href="pay2.html"><div class="cost">Стоимость товара:93 673 ₽</div></a>
+                </div>
             </div>
             <div class="z2000">
 
                 Технические характеристики компьютера
                 Процессор
                 <ul>
-                    <li>Модель: AMD Ryzen 5 7500F</li>
-                    <li>Количество ядер: 6</li>
+                    <li>Модель процессора:
+                        Intel Core i5-12400F</li>
+                    <li> Общее количество ядер: 6</li>
                     <li>Количество потоков: 12</li>
-                    <li>Тактовая частота: от 3,7 ГГц до 5 ГГц</li>
+                    <li>Тактовая частота: от 2,5 ГГц до 4,4 ГГц</li>
+                    <li></li>
                 </ul>
-                Оперативная память (ОЗУ)
+                ОЗУ
                 <ul>
-                    <li>Объём: 32 ГБ</li>
-                    <li>Тип: DDR5</li>
+                    <li>Объём: 16 ГБ</li>
+                    <li>Тип: DDR4</li>
                 </ul>
-                Видеокарта
-                <ul>
-                    <li>Модель: GeForce RTX 5070</li>
+                 Видеокарта
+               <ul>
+                    <li>Модель: RTX 3060</li>
                     <li>Объём видеопамяти: 12 ГБ</li>
-                    <li>Тип видеопамяти: GDDR7</li>
+                    <li>Тип видеопамяти: GDDR6</li>
                 </ul>
                 Операционная система
                 <ul>
                     <li>Предустановленная ОС: отсутствует</li>
                 </ul>
-
-                Видеоразъёмы
+                 Видеоразъёмы
                 <ul>
                     <li>HDMI: 1 шт.</li>
                     <li>DisplayPort: 3 шт.</li>
                 </ul>
-
-
-                Чипсет
+                Материнская плата
                 <ul>
-                    <li>Модель: AMD B650</li>
-                    <li>Сокет: AM5</li>
+                    <li>Сокет: LGA 1700</li>
+                    <li> Чипсет: Intel B760</li>
                 </ul>
             </div>
         </div>
