--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="itog.css">
 </head>
 
@@ -32,9 +32,8 @@
                 <div class="card">
                     <div class="name">Ну очень крутой компьютер 2000</div>
                     <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
-                    <div class="cost">Стоимость товара:132 499 ₽</div>
+                    <div class="cost">Стоимость товара:93 673 ₽</div>
             </a>
-
         </div>
         <a href="sec.html">
             <div class="card">
@@ -43,9 +42,16 @@
                 <div class="cost">Стоимость товара:666 666 ₽</div>
             </div>
         </a>
-        </div>
-
-
+            <a href="basemin.html">
+                <div class="card">
+                    <div class="name">Базовый минимум <br> Минимальная база</div>
+                    <div class="photo"><img src="img/rtx 3060.png" alt="+"></div>
+                    <div class="cost">Стоимость товара:60 000 ₽</div>
+                </div>
+            </a>
+         </div>   
+            
+        
     </main>
 </body>
 
