--- a/sec.html
+++ b/sec.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="three.css">
-    <title>Document</title>
+    <title>НУ ПРОСТО МОЩЬ ВО ПЛОТИ 3000</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <main>
         <div class="container">
             <div class="card">
-                <div class="name">НУ ПРОСТО МОЩЬ ВО ПЛОТИ </div>
+                <div class="name">НУ ПРОСТО МОЩЬ ВО ПЛОТИ 3000</div>
                 <div class="photo"> <img src="img/r9.png" alt="7500f"></div>
               <a href="pay2.html"><div class="cost">Стоимость товара:666 666 ₽</div></a>  
                 </div>
