--- a/pay2.html
+++ b/pay2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Оплата</title>
     <link rel="stylesheet" href="pay2.css">
 </head>
 
