--- a/basemin.html
+++ b/basemin.html
@@ -18,28 +18,47 @@
                 <div class="card">
                     <div class="name">Базовый минимум</div>
                     <div class="photo"><img src="img/rtx 3060.png" alt="+"></div>
-                    <a href="pay2.html"><div class="cost">Стоимость товара:93 673 ₽</div></a>
+                    <a href="pay2.html">
+                        <div class="cost">Стоимость товара:93 673 ₽</div>
+                    </a>
+                    <input checked type="radio" name="proc" class="AMD"> AMD
+                    <input type="radio" name="proc" class="Intel"> Intel
                 </div>
             </div>
             <div class="z2000">
 
                 Технические характеристики компьютера
-                Процессор
-                <ul>
-                    <li>Модель процессора:
-                        Intel Core i5-12400F</li>
-                    <li> Общее количество ядер: 6</li>
-                    <li>Количество потоков: 12</li>
-                    <li>Тактовая частота: от 2,5 ГГц до 4,4 ГГц</li>
-                    <li></li>
-                </ul>
+                <div class="Intel proc">
+                    Процессор
+                    <ul>
+                        <li>Модель процессора:
+                            Intel Core i5-12400F</li>
+                        <li> Общее количество ядер: 6</li>
+                        <li>Количество потоков: 12</li>
+                        <li>Тактовая частота: от 2,5 ГГц до 4,4 ГГц</li>
+                    </ul>
+                </div>
+                <div class="AMD proc">
+                    Процессор
+                    <ul>
+                        <li>Модель процессора: AMD Ryzen 5 5600</li>
+                        <li> Общее количество ядер: 6</li>
+                        <li> Количество потоков: 12</li>
+                        <li>Тактовая частота от 3,5 ГГц до 4,4 ГГц</li>
+                    </ul>
+                </div>
+
+
+
+
+
                 ОЗУ
                 <ul>
                     <li>Объём: 16 ГБ</li>
                     <li>Тип: DDR4</li>
                 </ul>
-                 Видеокарта
-               <ul>
+                Видеокарта
+                <ul>
                     <li>Модель: RTX 3060</li>
                     <li>Объём видеопамяти: 12 ГБ</li>
                     <li>Тип видеопамяти: GDDR6</li>
@@ -48,7 +67,7 @@
                 <ul>
                     <li>Предустановленная ОС: отсутствует</li>
                 </ul>
-                 Видеоразъёмы
+                Видеоразъёмы
                 <ul>
                     <li>HDMI: 1 шт.</li>
                     <li>DisplayPort: 3 шт.</li>
