--- a/three.html
+++ b/three.html
@@ -18,6 +18,8 @@
                 <div class="name">Ну очень крутой компьютер 2000</div>
                 <div class="photo"> <img src="img/ardor gaming 7500f-Photoroom.png" alt="7500f"></div>
             <a href="pay2.html"><div class="cost">Стоимость товара:173 457 ₽</div></a>    
+            <input checked type="radio" name="proc" class="AMD"> AMD
+            <input type="radio" name="proc" class="Intel"> Intel
             </div>
             <div class="z2000">
 
