--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 </div>
             </a>
 
-            <a href="basemin.html">
+            <a href="sborka.html">
                 <div class="card">
-                    <div class="name">Базовый минимум <br> Минимальная база</div>
-                    <div class="photo"><img src="img/rtx 3060.png" alt="компьютер"></div>
-                    <div class="cost">Стоимость товара:93 673 ₽</div>
+                    <div class="name"> Сборка</div>
+                    <div class="photo"><img src="img/sborka_pc.png" alt="компьютер"></div>
+                    <div class="cost">Стоимость товара: от 3 000₽</div>
                 </div>
             </a>
         </div>
